# closest-match

./: .eslintrc.js  .gitignore  Cargo.toml  DEPLOYMENT_QUICKSTART.md  IMPLEMENTATION_PLAN.md  README.md  README_WASM.md  WASM_ANNOTATION_FIXES.md  WASM_DEPLOYMENT_GUIDE.md  WASM_INTEGRATION_SUMMARY.md  annotate_pdf.py  closest_match.py  debug-wasm-coordinates.html  embedded_text.txt  extract_box.py  extract_text.py  hocr page 1.txt  jest.config.js  main.py  package-lock.json  package.json  search_string.txt  test-coordinate-extraction.html  test-debug-real.html  test-main-demo-simple.html  test-main-demo.html  test-real-hocr-data.html  test_wasm_loading.html  tsconfig.json  webpack.config.js
.claude/: settings.local.json
assets/: flow chart.pptx
demo/: index.html  wasm-demo-simple.html  wasm-demo.html
js-implementation/: ANNOTATION_3_FIX_SUMMARY.md  ANNOTATION_6_FINAL_FIX.md  EXPLICIT_TYPE_WRAPPER_FIX.md  MULTI_QUAD_FIX_SUMMARY.md  PDF_CORRUPTION_FIX_SUMMARY.md  README.md  debug-annotation-3.html  debug-annotation-6.html  debug-multi-quad.html  debug-pdf-corruption.html  package-lock.json  package.json  test-annotation-format.html  test-server.html
js-implementation/demo/: debug.html  index.html  simple.html  (+4 more)
src/: batch-processor.ts  cache-manager.ts  citation-generator.ts  document-annotator.ts  document-worker.ts  hocr_parser.rs  index.ts  lib.rs  pdf-annotator.ts  pdf_annotator.rs  rich-text-parser.ts  string_matching.rs  types.ts  utils.rs  worker-manager.ts
tests/: document-annotator.test.ts  pdf-annotator.test.ts  rich-text-parser.test.ts  setup.ts
(+10 files in other folders)
